<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:divider="@drawable/empty_tall_divider"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_note"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/note"
            style="@style/ButtonGreen"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_article"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/atricle"
            style="@style/ButtonGreen"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_training"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/training"
            style="@style/ButtonGreen"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view3"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:layout_marginTop="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_training" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="15dp"
        android:text="@string/training1"
        style="@style/Title"/>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="15dp"
        android:text="@string/training2"
        style="@style/Title" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>